# 50TimusTaskCPP

./: CMakeLists.txt  README.md
Task1/: CMakeLists.txt  main.cpp
Task10/: CMakeLists.txt  main.cpp
Task11/: CMakeLists.txt
Task12/: CMakeLists.txt
Task13/: CMakeLists.txt
Task14/: CMakeLists.txt
Task15/: CMakeLists.txt
Task16/: CMakeLists.txt
Task17/: CMakeLists.txt
Task18/: CMakeLists.txt
Task19/: CMakeLists.txt
Task2/: CMakeLists.txt  main.cpp
Task20/: CMakeLists.txt
Task21/: CMakeLists.txt
Task22/: CMakeLists.txt
Task23/: CMakeLists.txt
Task24/: CMakeLists.txt
Task25/: CMakeLists.txt
Task26/: CMakeLists.txt
Task27/: CMakeLists.txt
Task28/: CMakeLists.txt
Task29/: CMakeLists.txt
Task3/: CMakeLists.txt
Task30/: CMakeLists.txt
Task31/: CMakeLists.txt
Task32/: CMakeLists.txt
Task33/: CMakeLists.txt
Task34/: CMakeLists.txt
Task35/: CMakeLists.txt
Task36/: CMakeLists.txt
Task37/: CMakeLists.txt
Task38/: CMakeLists.txt
Task39/: CMakeLists.txt
Task4/: CMakeLists.txt
Task40/: CMakeLists.txt
Task41/: CMakeLists.txt
Task42/: CMakeLists.txt
Task43/: CMakeLists.txt
Task44/: CMakeLists.txt
Task45/: CMakeLists.txt
Task46/: CMakeLists.txt
Task47/: CMakeLists.txt
Task48/: CMakeLists.txt
Task49/: CMakeLists.txt
Task5/: CMakeLists.txt
Task50/: CMakeLists.txt
Task6/: CMakeLists.txt
Task7/: CMakeLists.txt
Task8/: CMakeLists.txt
Task9/: CMakeLists.txt
