add_subdirectory(Task1)
add_subdirectory(Task2)
add_subdirectory(Task3)
add_subdirectory(Task4)
add_subdirectory(Task5)
add_subdirectory(Task6)
add_subdirectory(Task7)
add_subdirectory(Task8)
add_subdirectory(Task9)
add_subdirectory(Task10)
add_subdirectory(Task11)
add_subdirectory(Task12)
add_subdirectory(Task13)
add_subdirectory(Task14)
add_subdirectory(Task15)
add_subdirectory(Task16)
add_subdirectory(Task17)
add_subdirectory(Task18)
add_subdirectory(Task19)
add_subdirectory(Task20)
add_subdirectory(Task21)
add_subdirectory(Task22)
add_subdirectory(Task23)
add_subdirectory(Task24)
add_subdirectory(Task25)
add_subdirectory(Task26)
add_subdirectory(Task27)
add_subdirectory(Task28)
add_subdirectory(Task29)
add_subdirectory(Task30)
add_subdirectory(Task31)
add_subdirectory(Task32)
add_subdirectory(Task33)
add_subdirectory(Task34)
add_subdirectory(Task35)
add_subdirectory(Task36)
add_subdirectory(Task37)
add_subdirectory(Task38)
add_subdirectory(Task39)
add_subdirectory(Task40)
add_subdirectory(Task41)
add_subdirectory(Task42)
add_subdirectory(Task43)
add_subdirectory(Task44)
add_subdirectory(Task45)
add_subdirectory(Task46)
add_subdirectory(Task47)
add_subdirectory(Task48)
add_subdirectory(Task49)
add_subdirectory(Task50)